Update tests for Logging logic aspects